// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProfileHeader shifts between visualization modes 1`] = `
<DocumentFragment>
  <div
    data-mode="large"
    role="toolbar"
  >
    <div
      class="navbar-2"
    >
      <input
        class="flamegraph-search"
        data-testid="flamegraph-search"
        name="flamegraph-search"
        placeholder="Search…"
      />
       
      <button
        class="btn"
        data-testid="reset-view"
        disabled=""
        id="reset"
        type="button"
      >
        Reset View
      </button>
      <select
        aria-label="fit-mode"
        class="fit-mode-select"
      >
        <option
          disabled=""
        >
          Prefer to fit
        </option>
        <option
          value="HEAD"
        >
          Head First
        </option>
        <option
          value="TAIL"
        >
          Tail First
        </option>
      </select>
      <div
        class="navbar-space-filler"
      />
      <div
        class="btn-group viz-switch"
      >
        <button
          class="btn"
          data-testid="btn-table-view"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="svg-inline--fa fa-table fa-w-16 "
            data-icon="table"
            data-prefix="fas"
            focusable="false"
            role="img"
            viewBox="0 0 512 512"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M464 32H48C21.49 32 0 53.49 0 80v352c0 26.51 21.49 48 48 48h416c26.51 0 48-21.49 48-48V80c0-26.51-21.49-48-48-48zM224 416H64v-96h160v96zm0-160H64v-96h160v96zm224 160H288v-96h160v96zm0-160H288v-96h160v96z"
              fill="currentColor"
            />
          </svg>
            Table
        </button>
        <button
          class="btn active"
          data-testid="btn-both-view"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="svg-inline--fa fa-columns fa-w-16 "
            data-icon="columns"
            data-prefix="fas"
            focusable="false"
            role="img"
            viewBox="0 0 512 512"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M464 32H48C21.49 32 0 53.49 0 80v352c0 26.51 21.49 48 48 48h416c26.51 0 48-21.49 48-48V80c0-26.51-21.49-48-48-48zM224 416H64V160h160v256zm224 0H288V160h160v256z"
              fill="currentColor"
            />
          </svg>
            Both
        </button>
        <button
          class="btn"
          data-testid="btn-flamegraph-view"
          type="button"
        >
          <svg
            aria-hidden="true"
            class="svg-inline--fa fa-icicles fa-w-16 "
            data-icon="icicles"
            data-prefix="fas"
            focusable="false"
            role="img"
            viewBox="0 0 512 512"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M511.4 37.9C515.1 18.2 500 0 480 0H32C10.6 0-4.8 20.7 1.4 41.2l87.1 273.4c2.5 7.2 12.7 7.2 15.1 0L140 190.5l44.2 187.3c1.9 8.3 13.7 8.3 15.6 0l46.5-196.9 34.1 133.4c2.3 7.6 13 7.6 15.3 0l45.8-172.5 66.7 363.8c1.7 8.6 14 8.6 15.7 0l87.5-467.7z"
              fill="currentColor"
            />
          </svg>
            Flamegraph
        </button>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`ProfileHeader shifts between visualization modes 2`] = `
<DocumentFragment>
  <div
    data-mode="small"
    role="toolbar"
  >
    <div
      class="navbar-2"
    >
      <input
        class="flamegraph-search"
        data-testid="flamegraph-search"
        name="flamegraph-search"
        placeholder="Search…"
      />
       
      <button
        class="btn"
        data-testid="reset-view"
        disabled=""
        id="reset"
        type="button"
      >
        Reset View
      </button>
      <select
        aria-label="fit-mode"
        class="fit-mode-select"
      >
        <option
          disabled=""
        >
          Prefer to fit
        </option>
        <option
          value="HEAD"
        >
          Head First
        </option>
        <option
          value="TAIL"
        >
          Tail First
        </option>
      </select>
      <div
        class="navbar-space-filler"
      />
      <div
        class="btn-group viz-switch"
      >
        <select
          aria-label="view"
        >
          <option
            value="table"
          >
            Table
          </option>
          <option
            value="both"
          >
            Both
          </option>
          <option
            value="icicle"
          >
            Flamegraph
          </option>
        </select>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
